# github-actions-security

./: .cache_ggshield  .gitignore  .venv  README.md  biblio.md  requirements.txt  tools.csv
.github/workflows/: ci.yml
capabilities/: final-tool-capabilities.csv  group_tool_capabilities.csv  revising-tool-cap.csv  rules_mapping.csv  tool-capabilities-matrix.csv  tool-groups-matrix.csv
dataset/: fetched_workflows.pkl  workflow_list.csv  workflow_metadata.csv  workflow_metadata_no-content.csv
results/: coverage_matrix.csv  detection_volume_matrix.csv  execution_time.csv  findings_workflows_table.csv  merged_rules_detections.csv  semgrep_runtime_justification.csv
results/execution_time/: actionlint_times.csv  frizbee_times.csv  ggshield_times.csv  pinny_times.csv  poutine_times.csv  scharf_times.csv  scorecard_times.csv  semgrep_times.csv  zizmor_times.csv
results/manual_review/: selected_workflows.txt
results/manual_reviewed/: Genymobile_scrcpy__release.yml_summary.csv  axios_axios__publish.yml_summary.csv  denoland_deno__npm_publish.yml_summary.csv  denoland_deno__promote_to_release.yml_summary.csv  denoland_deno__start_release.yml_summary.csv  electron_electron__audit-branch-ci.yml_summary.csv  facebook_react-native__test-all.yml_summary.csv  facebook_react__runtime_build_and_test.yml_summary.csv  facebook_rocksdb__pr-jobs.yml_summary.csv  facebook_watchman__getdeps_linux.yml_summary.csv  facebook_watchman__getdeps_mac.yml_summary.csv  google_auto__ci.yml_summary.csv  google_truth__ci.yml_summary.csv  huggingface_transformers__self-scheduled-amd-mi250-caller.yml_summary.csv  huggingface_transformers__self-scheduled-amd-mi300-caller.yml_summary.csv  microsoft_TypeScript__codeql.yml_summary.csv  n8n-io_n8n__ci-postgres-mysql.yml_summary.csv  selected_workflows.txt
results/merged/: AUTOMATIC1111_stable-diffusion-webui__on_pull_request.yml.json  AUTOMATIC1111_stable-diffusion-webui__run_tests.yml.json  AUTOMATIC1111_stable-diffusion-webui__warns_merge_master.yml.json  Chalarangelo_30-seconds-of-code__deploy-production.yml.json  Chalarangelo_30-seconds-of-code__label.yml.json  Chalarangelo_30-seconds-of-code__stale.yml.json  Chalarangelo_30-seconds-of-code__test.yml.json  EbookFoundation_free-programming-books__check-urls.yml.json  EbookFoundation_free-programming-books__comment-pr.yml.json  EbookFoundation_free-programming-books__detect-conflicting-prs.yml.json  EbookFoundation_free-programming-books__fpb-lint.yml.json  EbookFoundation_free-programming-books__issues-pinner.yml.json  EbookFoundation_free-programming-books__rtl-ltr-linter.yml.json  Genymobile_scrcpy__release.yml.json  (+582 more)
scripts/: actionlint_times1.csv  capabilities.ipynb  fetch_workflows.ipynb  ggshield_times1.csv  pinny_times1.csv  results.ipynb  run_tools.ipynb  scharf_times1.csv  vulnerable_workflows.ipynb
tools/semgrep/semgrep-1.124.0/libs/collections/: Assoc.ml  Hashtbl_.ml  Hashtbl_.mli  List_.ml  List_.mli  Maps.ml  ROHashtbl.ml  ROHashtbl.mli  Seq_.ml  Seq_.mli  Set_.ml  Sets.ml  dune
tools/semgrep/semgrep-1.124.0/libs/collections/tests/: Collections_tests.ml  Unit_Seq_.ml  dune
tools/semgrep/semgrep-1.124.0/libs/git_wrapper/: Git_wrapper.ml  Git_wrapper.mli  Testutil_git.ml  Unit_git_wrapper.ml  dune
tools/semgrep/semgrep-1.124.0/src/ast_generic/: AST_generic.ml  AST_generic_helpers.ml  AST_generic_helpers.mli  Meta_AST.ml  dune
tools/semgrep/semgrep-1.124.0/src/core_scan/: Core_scan.ml  Core_scan.mli  Core_scan_config.ml  Core_targeting.ml  Core_targeting.mli  Lang_job.ml  Parmap_targets.ml  Parmap_targets.mli  dune
tools/semgrep/semgrep-1.124.0/src/osemgrep/cli_show/: Show_CLI.ml  Show_CLI.mli  Show_subcommand.ml  Show_subcommand.mli  Test_show_subcommand.ml  Test_show_subcommand.mli  Whoami.ml  dune
tools/semgrep/semgrep-1.124.0/src/osemgrep/reporting/: Cli_json_output.ml  Cli_json_output.mli  Gitlab_output.ml  Junit_xml_output.ml  Output.ml  Output.mli  Sarif_output.ml  Sarif_output.mli  Semgrep_hashing_functions.ml  Semgrep_hashing_functions.mli  Skipped_groups.ml  Skipped_groups.mli  Text_output.ml  Text_output.mli  Text_reports.ml  Text_reports.mli  dune
tools/semgrep/semgrep-1.124.0/src/tests/: Test.ml  dune
weakness/: rules_mapping.csv
(+6901 files in other folders)
