; wrapper library around the 'git' command-line tool
(library
  (public_name git_wrapper)
  (name git_wrapper)
  (wrapped false)
  (libraries
     fpath
     bos
     uuidm
     timedesc

     commons
     paths
     git
  )
  (preprocess (pps
     ppx_deriving.show
     ppx_deriving.eq
     ppx_deriving.ord
     ppx_sexp_conv
))
)
