(test
 (name test)
 (action (run %{exe:test.exe})); Ensure we're running the native binary
 (libraries
    commons
    process_limits
    lib_parsing
    aliengrep
    spacegrep_tests
    paths
    git_wrapper

    ; unix platform stuff
    lwt_platform.unix
    tracing.unix
    cohttp-lwt-unix

    commons.tests
    collections.tests
    parallelism.tests
    semgrep.analyzing.tests ; Unit_dataflow
    semgrep.core
    semgrep.core_cli
    semgrep.printing.tests
    semgrep.fixing.tests
    semgrep.metachecking
    semgrep.parsing
    semgrep.parsing_languages
    semgrep.matching
    semgrep.engine
    parser_python.menhir parser_python.ast_generic
    semgrep.data

    osemgrep_language_server
    osemgrep_cli_login
    semgrep.osemgrep_tests
  )
 (modes native byte) ; bytecode here for debugging
 (preprocess
   (pps
      ppx_deriving.show
   ))
)
