; OCaml implementation of the 'semgrep show' subcommand.

(library
  (public_name semgrep.osemgrep_cli_show)
  (name osemgrep_cli_show)
  (wrapped false)
  (libraries
    cmdliner
    commons
    lwt
    networking.http_helpers
    lwt_platform
    testo

    semgrep.parsing
    semgrep.parsing.tests ; Test_parsing.dump_tree_sitter_cst
    semgrep.targeting

    osemgrep_core
    osemgrep_configuring
    osemgrep_networking
  )
 (preprocess
   (pps
     ppx_profiling
     ppx_deriving.show
     ppx_deriving.eq
     ppx_hash
     lwt_ppx
   )
 )
)
