;LATER: to merge with semgrep_reporting at some point
(library
 (public_name semgrep.osemgrep_reporting)
 (name osemgrep_reporting)
 (wrapped false)
 (libraries
   commons
   fmt ; TODO: get rid of this dependency
   terminal_size
   digestif
   xmlm
   sarif
   python-str-repr
   ; for Console_spinner
   lwt
   lwt_platform

   murmur3
   osemgrep_configuring
   osemgrep_core
   semgrep.reporting
   semgrep.targeting
   semgrep.fixing ; for Cli_json_output.ml
   semgrep.parsing ; for Unit_reporting use of Parse_rule.ml
 )
 (preprocess
   (pps
     ppx_profiling
     ppx_deriving.show
     ppx_deriving.eq
     ppx_hash
     lwt_ppx
   )
 )
)
